fix label text wrap

--- a/Shadowdark-Unofficial/Shadowdark-Unofficial.css
+++ b/Shadowdark-Unofficial/Shadowdark-Unofficial.css
@@ -317,6 +317,7 @@ span.sd-text {
 
 label.sheet-form-checkbox {
   display: inline-block;
+  white-space: normal;
 }
 
 .sheet-form-group .trait-name,
